<resources>
    <string name="app_name">Simple Netkeeper</string>
    <string name="main_view_title">欢迎使用Simple Netkeeper</string>
    <string name="main_view_but_connect">现在连接</string>
    <string name="main_view_but_guide">设置向导</string>
    <string name="main_view_but_changeinfo">用户信息</string>
    <string name="main_view_tips_connect">若需要设置新的路由器，请点击“设置向导”。\n免费软件，拿来卖路由器或者"技术"的请自重。</string>
    <string name="main_view_tips_guide">WIFI网络状态：未连接</string>
    <string name="title_activity_first_run">设置向导</string>
    <string name="main_view_but_ontime">定时连接</string>
    <string name="main_view_help">？</string>
    <string name="main_view_copyright">By CrazyChen @ CQUT https://sunflyer.cn</string>

    <string name="otd_title">定时拨号设置</string>
    <string name="otd_option">请选择设置方式：</string>
    <string name="otd_router">预设置模式 - 由我的路由器定时连接</string>
    <string name="otd_device">提醒模式 - 由我的安卓设备定时连接</string>
    <string name="otd_time">设置定时拨号的时间：\n请设置拨号时间。如果你使用提醒模式，则可以不用设置断网时间。</string>
    <string name="otd_button">保存设置</string>
    <string name="otd_button_set">现在设置</string>
    <string name="otd_startdial">拨号时间</string>
    <string name="otd_hint_hs">时</string>
    <string name="otd_hint_ms">分</string>
    <string name="otd_enddial">断网时间</string>
    <string name="otd_hint_he">时</string>
    <string name="otd_hint_me">分</string>
    <string name="otd_hint_week">设置后台拨号时间段(提醒模式)：\n(以周日为第一天并用0表示，周一为1，周六则为6。\n例如，设置星期一到星期五，则输入1，5；设置整周都要拨号，输入0，6)</string>
    <string name="otd_hint_wifiinfo">设置无线网络(提醒模式):</string>
    <string name="otd_hint_wifiname">WIFI名称（留空则为当前）</string>
    <string name="otd_hint_wifikey">WIFI的密码</string>
    <string name="otd_hint_ws">起始日</string>
    <string name="otd_hint_we">结束日</string>
    <string name="otd_des">使用须知：\n定时拨号功能可帮助你实现在指定时间段设置路由器拨号连接上网\n目前可选实现方式有两种：\n\n预设置模式 ： 在断网后，由你手动设置路由器在指定时间自动拨号。在设置后现有网络连接会被立即断开。使用到了路由器拨号模式中的定时拨号功能（仅适用于TP/水星/FAST的旧版路由器），这项功能不需要你保持手机开机状态。但是由于使用此功能一般都在断网后，因此除非你是夜猫子，或者断网时你一般还没有休息，不然的话建议使用第二种模式。\n\n提醒模式 ： 与你的闹钟类似，在你设置的时间由应用程序通过后台服务设置你的路由器，需要你的手机处于开机状态。你需要提供起始时间、设置的时间段（从星期x到星期y），以及要设置的无线网络名称和密码（这里是WiFi密码，请注意）。在连接成功后，程序会在通知栏显示一条提示信息，以告知最终连接结果。如果指定时间之后没有出现提示，一般是由于连接无线网出现错误，或者你的时间段设置有误。</string>

    <string name="guide_title">路由器设置向导</string>
    <string name="guide_index">欢迎使用Simple Netkeeper\n\n软件为免费软件，如果你是从某些“卖破解路由器”或者某些“技术人员”手中得到的，请立即退货！！！因为会导致各种情况比如坑爹啦坑钱啦等等。\n另外，如果这些人收了你20以上（带路由器收了70以上）的所谓“破解费用”的话，直接带刀砍奸商吧，骚年，你已经被坑惨了。\n\n在准备设置向导之前，请您确认：\n\n--本软件目前适用于 水星，TP-LINK，FAST 的大多数路由器，腾达，斐讯等路由器暂时不在支持范围\n\n--路由器的WAN口与墙上的网线已接好\n\n--路由器的管理密码（不是WIFI密码，而是你登录路由器管理界面的密码！）你已经设置好，而不是空密码\n\n--路由器的WIFI功能已经配置完毕（包括WIFI名称，密码，个人建议关闭路由器您的WPS功能，因为WPS功能容易导致蹭网发生）\n\n--这台设备已经连接到了你路由器的无线网络（也就是连接到了你的WIFI）\n\n--对于使用新版本固件的路由器（比如水星的MW313R，TP-LINK的部分TL-842N路由器）：\n请在路由器管理界面，点击右上角“高级设置”\n然后点击左边的“网络设置”\n在右边选择“上网方式”为“宽带拨号上网”，账号和密码随便填写即可\n然后滚动到下方，拨号方式选择为“手动拨号”\n点击勾勾保存设置。\n\n在确认以上操作执行完成后，请在下方选择你的路由器型号，然后点击按钮开始操作</string>
    <string name="guide_start">开始设置</string>
    <string name="guide_promote_manu">选择你的路由器品牌</string>

    <string name="acc_title">用户信息设置</string>
    <string name="acc_hint_nkname">宽带账号名称</string>
    <string name="acc_hint_nkpass">宽带账号密码</string>
    <string name="acc_hint_rip">路由器IP地址</string>
    <string name="acc_hint_rname">路由器管理员用户名</string>
    <string name="acc_hint_rpass">路由器管理员密码</string>
    <string name="acc_hint_radius">设置使用区域</string>
    <string name="acc_but_config">立即设置</string>
    <string name="acc_check_selfradius">我所在的地区不在列表中</string>
    <string name="acc_hint_nkradius">设置Radius</string>
    <string name="acc_hint_nkprefix">设置Prefix(默认请填写\\r\\n)</string>
    <string name="acc_check_save">保存全部信息</string>
    <string name="acc_tv_status">准备就绪</string>
    <string name="acc_but_internal">切换内网</string>
    <string name="acc_but_info">当前状态</string>
    <string name="acc_tv_help">使用说明：\n\n--从上到下的输入框分别为宽带账号，宽带密码，路由器地址，路由器账号，路由器密码\n\n--“切换内网”会将路由器连接转换为动态IP模式以使用内网，此时拨号连接会被断开。“当前状态”可以查询路由器当前连接状态。“内网切换”目前仅对2014年上半年及以前的水星/TP/FAST路由器有效\n\n--如果你使用了设置向导，一般情况下路由器管理员用户名和路由器地址是不需要你进行操作的，保持默认即可。\n\n--路由器密码是你登录路由器设置界面所需要的密码，而不是你的Wifi密码！\n\n--如果勾选了保存设置，则在你点击设置按钮以后，程序会将你所输入的信息保存到数据文件中，下次启动时会自动载入这些数据，而不需要你重复输入。\n\n--如果在设置路由器过程中出现了问题，比如提示连接失败，追踪错误，验证失败，一般情况下是因为路由器接线或者你所输入的信息错误导致。其他的错误提示请参见我个人博客中对错误内容的解释。</string>

    <string name="opt_title">其他......</string>
    <string name="opt_about_title">Simple Netkeeper For Android</string>
    <string name="opt_about_info">版权所有 2014~2015 CrazyChen@CQUT\n\n程序不得被用于任何形式的商业用途，拿来卖钱的奸商和所谓“技术人员”请自重，为了一点钱卖掉你的智商我也是不想说多话了。People is people , dog is dog。\n\n程序使用过程中不会有任何形式的收费存在，也不会收集任何隐私信息。\n\n由于个人对Android开发只是停留在“知道这个但是不知道那个”的情况，使用过程中难免会出现一些问题，还请理解！也欢迎访问我的个人博客提出意见与建议！</string>
    <string name="opt_update">检查更新</string>
    <string name="opt_info">发送错误日志</string>
    <string name="opt_blog">访问我的博客</string>
    <string name="opt_group">访问 Crazy For Code 团队官网</string>
    <string name="opt_about_ver">版本。骚年，如果你是想着改这东西赚钱的话，别想了，回家种田去吧。people is people,dog is dog</string>

    <string name="wl_text">请稍候......</string>

    <string name="qd_title">Simple Netkeeper</string>
    <string name="qd_con">This is a dialog for showing information,if you see this,pls tell me what you are doing when this happened so that I can fix it,thanks</string>
    <string name="qd_but_ok">Ok</string>
    <string name="qd_but_no">No</string>
</resources>
